--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,12 @@
             <artifactId>spring-boot-starter-webmvc</artifactId>
         </dependency>
 
+        <!-- Source: https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jasper</artifactId>
-            <version>10.1.16</version>
+            <version>11.0.14</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
